# waverider

./: .pre-commit-config.yaml  CMakeLists.txt  README.md
chomp_ros/: CMakeLists.txt  package.xml
chomp_ros/app/: chomp_node.cc
chomp_ros/include/chomp_ros/: chomp_eval_planner.h  chomp_optimizer.h
chomp_ros/src/: chomp_optimizer.cc
waverider/: CMakeLists.txt  package.xml
waverider/include/waverider/: common.h  eval_planner.h  obstacle_filter.h  parallelized_policy.h  policy_tuning.h  waverider_policy.h
waverider/src/: obstacle_filter.cc  parallelized_policy.cc  waverider_policy.cc
waverider_msgs/: CMakeLists.txt  package.xml
waverider_ros/: CMakeLists.txt  package.xml
waverider_ros/app/: eval_node.cc  server_node.cc
waverider_ros/config/: livox_mid360.yaml  waverider_server.rviz  wavestork.yaml
waverider_ros/include/waverider_eval/: waverider_evaluator.h
waverider_ros/include/waverider_ros/: policy_visuals.h  wavemap_avoidance.h  wavemap_policy.h  waverider_server.h
waverider_ros/include/waverider_ros/wavemap/: policy_debug.h  wavemap_policy_filter.h
waverider_ros/launch/: livox_mid360.launch  wavestork.launch
waverider_ros/src/: policy_visuals.cc  waverider_evaluator.cc  waverider_server.cc
