<?xml version="1.0"?>
<package format="2">
  <name>chomp_ros</name>
  <version>0.0.0</version>
  <description>Wavemap compatible CHOMP implementation.</description>

  <maintainer email="victorr@ethz.ch">Victor Reijgwart</maintainer>
  <license>BSD</license>
  <url>https://github.com/ethz-asl/waverider</url>

  <author email="victorr@ethz.ch">Victor Reijgwart</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>waverider</depend>
  <depend>wavemap</depend>
  <depend>wavemap_io</depend>
  <depend>wavemap_ros_conversions</depend>
</package>
